ステッカーの追加

--- a/src/pages/Sticker/index.scss
+++ b/src/pages/Sticker/index.scss
@@ -11,6 +11,11 @@
         border: 4px dashed #ddd;
         h3 {
             font-size: 3rem;
+            margin-bottom: 16px;
+        }
+        img {
+            margin-top: 40px;
+            height: 240px;
         }
     }
 }
